--- a/Source/sass/style.scss
+++ b/Source/sass/style.scss
@@ -6,5 +6,12 @@
 @import "global.scss";
 
 @import "blocks/page-header.scss";
-@import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
+@import "blocks/user-list.scss";
+@import "blocks/slider.scss";
+@import "blocks/banners.scss";
+@import "blocks/hits.scss";
+@import "blocks/features.scss";
+@import "blocks/news.scss";
+@import "blocks/mailing.scss";
+@import "blocks/feedback.scss";
