--- a/Source/sass/style.scss
+++ b/Source/sass/style.scss
@@ -15,3 +15,6 @@
 @import "blocks/news.scss";
 @import "blocks/mailing.scss";
 @import "blocks/feedback.scss";
+@import "blocks/social.scss";
+@import "blocks/development.scss";
+@import "blocks/footer-nav.scss";
