--- a/Source/sass/style.scss
+++ b/Source/sass/style.scss
@@ -6,8 +6,7 @@
 @import "global.scss";
 
 @import "blocks/page-header.scss";
-@import "blocks/site-list.scss";
-@import "blocks/user-list.scss";
+@import "blocks/sub-menu.scss";
 @import "blocks/slider.scss";
 @import "blocks/banners.scss";
 @import "blocks/hits.scss";
