Оформил главную страницу

--- a/Source/sass/blocks/banners.scss
+++ b/Source/sass/blocks/banners.scss
@@ -1,5 +1,5 @@
 .banners {
-  margin-bottom: 40px;
+  margin-bottom: 39px;
 }
 
 .banners__list {
@@ -10,12 +10,12 @@
 
 .banners__item {
   position: relative;
-  padding: 20px;
+  padding: 13px 20px;
 
   width: 560px;
   height: 230px;
 
-  border-radius: 18px;
+  border-radius: 16px;
 }
 
 .banners__item--1 {
@@ -35,7 +35,7 @@
 }
 
 .banners__description {
-  margin-bottom: 45px;
+  margin-bottom: 44px;
 
   font-size: 18px;
   font-weight: 700;
@@ -44,7 +44,7 @@
 .banners__button {
   position: absolute;
   right: 20px;
-  padding: 10px 25px;
+  padding: 10px 22px 12px;
 
   font-size: 18px;
   line-height: 24px;
