--- a/Source/sass/mixins.scss
+++ b/Source/sass/mixins.scss
@@ -21,3 +21,10 @@
   padding-right: 27px;
   margin: 0 auto;
 }
+
+@mixin placeholder {
+  &::-webkit-input-placeholder { @content; }
+  &:-moz-placeholder           { @content; }
+  &::-moz-placeholder          { @content; }
+  &:-ms-input-placeholder      { @content; }
+}
