--- a/Source/sass/blocks/feedback.scss
+++ b/Source/sass/blocks/feedback.scss
@@ -1,8 +1,21 @@
 .feedback {
+  position: relative;
   margin-bottom: 15px;
   background-image: url(../img/map.png);
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.feedback:after {
+  content: "";
+  position: absolute;
+  top: 138px;
+  left: 458px;
+
+  width: 218px;
+  height: 142px;
+
+  background-image: url(../img/map-marker.png);
 }
 
 .feedback__wrapper {
@@ -13,11 +26,11 @@
 
 .feedback__container {
   width: 300px;
-  margin: 60px 0;
-  padding: 25px;
+  margin: 62px 0 60px;
+  padding: 23px;
 
   background-color: $white;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .feedback__list {
@@ -26,7 +39,8 @@
 }
 
 .feedback__title {
-  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 0;
 
   font-size: 14px;
   line-height: 20px;
@@ -39,6 +53,16 @@
 
 .feedback__text {
   margin: 0;
+  margin-bottom: 20px;
+
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.feedback__tel {
+  margin-top: 3px;
+  margin-bottom: 0;
 
   font-size: 18px;
   line-height: 24px;
@@ -46,7 +70,7 @@
 }
 
 .feedback__description{
-  margin: 5px 0 25px;
+  margin: 2px 0 25px;
 
   font-size: 14px;
   line-height: 20px;
@@ -55,12 +79,12 @@
 
 .feedback__button {
   margin-bottom: 10px;
-  padding: 8px 20px;
+  padding: 8px 23px 11px;
 
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
 
   border: none;
-  border-radius: 23px;
+  border-radius: 22px;
 }
