--- a/Source/sass/blocks/footer-nav.scss
+++ b/Source/sass/blocks/footer-nav.scss
@@ -5,22 +5,41 @@
 .footer-nav__list {
   @include reset-list;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
+
+  padding-left: 20px;
 
   width: 350px;
 }
 
 .footer-nav__item a {
   display: block;
-  width: 170px;
+
+  padding-bottom: 2px;
+
+  min-width: 145px;
 
   font-size: 13px;
   line-height: 18px;
   font-weight: 400;
   color: $white;
+  text-decoration: underline;
+  text-decoration-color: rgba(255, 255, 255, 0.2);
 }
 
 .footer-nav__item--like a {
+  position: relative;
   font-weight: 700;
+}
+
+.footer-nav__item--like a::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: -21px;
+
+  width: 15px;
+  height: 13px;
+  background-image: url(../img/heart.png);
 }
