--- a/Source/sass/blocks/mailing.scss
+++ b/Source/sass/blocks/mailing.scss
@@ -4,7 +4,7 @@
   width: 560px;
   height: 220px;
 
-  border-radius: 20px;
+  border-radius: 15px;
   background-image: url(../img/post-bg.png);
 }
 
@@ -17,31 +17,32 @@
 }
 
 .mailing__text {
-  margin-top: 10px;
-  margin-bottom: 40px;
+  margin-top: 8px;
+  margin-bottom: 36px;
   color: #5a5a5a;
 }
 
 .mailing__input {
   width: 370px;
-  padding: 10px;
+  padding: 10px 16px 12px;
   border-radius: 5px;
-  border: 1px solid #999999;
+  border: 1px solid $grey;
 }
 
 .mailing__input:hover {
-  border: 2px solid #999999;
+  border: 2px solid $grey;
 }
 .mailing__input:focus {
   border: 2px solid #8fbdec;
 }
 
 .mailing__input:active {
-  border: 1px solid #999999;
+  border: 1px solid $grey;
 }
 
 .mailing__button {
-  padding: 8px 15px;
+  margin-left: 7px;
+  padding: 10px 15px;
 
   font-size: 18px;
   line-height: 24px;
@@ -49,4 +50,5 @@
 
   border: none;
   border-radius: 23px;
+  cursor: pointer;
 }
