--- a/Source/sass/blocks/news.scss
+++ b/Source/sass/blocks/news.scss
@@ -4,11 +4,13 @@
   padding: 20px;
   width: 560px;
 
-  border-radius: 20px;
+  border-radius: 15px;
   background-image: url(../img/strawberrys.jpg);
 }
 
 .news__title {
+  margin-top: 2px;
+  margin-bottom: 4px;
 
   font-size: 16px;
   line-height: 22px;
