--- a/Source/sass/blocks/page-header.scss
+++ b/Source/sass/blocks/page-header.scss
@@ -13,6 +13,7 @@
 }
 
 .page-header__right-side {
+  position: relative;
   display: flex;
   justify-content: flex-end;
 }
@@ -41,6 +42,8 @@
   line-height: 18px;
   font-weight: 700;
   color: $white;
+  text-decoration: underline;
+  text-decoration-color: rgba(255, 255, 255, 0.2);
 
   border-radius: 18px;
 }
@@ -53,6 +56,7 @@
   font-size: 14px;
   line-height: 16px;
   font-weight: 500;
+  text-decoration: none;
 
   background-color: rgba(255, 255, 255, 0.2);
 }
@@ -85,7 +89,76 @@
 }
 
 .page-header__search {
-  display: none;
+  position: relative;
+
+}
+
+.page-header__search-popup {
+  position: absolute;
+  top: 55px;
+  right: 0;
+  display: block;
+
+  padding: 20px 15px;
+  width: 340px;
+
+  border-radius: 5px;
+  background-color: $white;
+
+  z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease-out 0.1s;
+}
+
+.page-header__search-button:focus + .page-header__search-popup,
+.page-header__search:hover .page-header__search-popup,
+.page-header__search-popup:hover {
+  visibility: visible;
+  opacity: 1;
+}
+
+.page-header__search-input {
+  padding: 10px 15px;
+  width: 310px;
+
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  color: $black;
+
+  @include placeholder {
+    font-size: 14px;
+    font-weight: 400;
+    color: $grey;
+  }
+
+  border: 1px solid $grey-light;
+  border-radius: 5px;
+}
+
+.page-header__search-button {
+  display: block;
+  margin-top: 15px;
+
+  width: 33px;
+  height: 33px;
+
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  background-image: url(../img/search-white.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.page-header__search-button:focus,
+.page-header__search-button:hover,
+.page-header__search-popup:hover + .page-header__search-button {
+  outline: none;
+  background-image: url(../img/search-black.svg);
+  background-color: $white;
 }
 
 .page-header__item--login::before {
@@ -122,7 +195,7 @@
   display: flex;
   justify-content: flex-end;
   margin: 0;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 
   font-size: 14px;
   line-height: 16px;
