--- a/Source/sass/variables.scss
+++ b/Source/sass/variables.scss
@@ -4,9 +4,9 @@ $black: #000;
 $background-1: #849d8f;
 $background-2: #8996a6;
 $background-3: #9d8b84;
-/*$green-darker: #1c9b5e;
-$grey-light: #f2f2f2;
-$grey: #e5e5e5;
+//*$green-darker: #1c9b5e;
+$grey-light: #d3d3d2;
+$grey: #999999;
 
 /*global colors rules*/
 $font-color: $white;
