--- a/Source/sass/blocks/product.scss
+++ b/Source/sass/blocks/product.scss
@@ -1,6 +1,11 @@
-.hits__list {
+.product__list {
   @include reset-list;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 23px;
+}
+
+.product__item {
+  margin-bottom: 20px;
 }
