--- a/Source/sass/global.scss
+++ b/Source/sass/global.scss
@@ -42,6 +42,10 @@ a {
   @include container;
 }
 
+.background-0 {
+  background-color: $background-1;
+}
+
 .background-1 {
   background-color: $background-1;
   background-image: url(../img/background1.jpg);
