--- a/Source/sass/style.scss
+++ b/Source/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/slider.scss";
 @import "blocks/banners.scss";
 @import "blocks/hits.scss";
+@import "blocks/card.scss";
 @import "blocks/features.scss";
 @import "blocks/news.scss";
 @import "blocks/mailing.scss";
@@ -17,3 +18,4 @@
 @import "blocks/social.scss";
 @import "blocks/development.scss";
 @import "blocks/footer-nav.scss";
+@import "blocks/product.scss";
